# GempaAlertID

./: README.md  check_mem.py  conn_ws_thrd_1.py  extract_mulewpkl.py  gempaalertid.py  setup.py  update_status.py  vor_update.py
EQdetect/: __init__.c  __init__.cp38-win_amd64.pyd  __init__.pyx  sampah.py
EQdetect/core/: __init__.c  __init__.cp38-win_amd64.pyd  __init__.pyx  depths.npy  distances.npy  interp_func_1.pkl  sourcecal.c  sourcecal.cp38-win_amd64.pyd  sourcecal.pyx  traveltime_grid.npy
EQdetect/utils/: __init__.c  __init__.cp38-win_amd64.pyd  __init__.cp39-win_amd64.pyd  __init__.pyx  config.c  config.cp38-win_amd64.pyd  config.cp39-win_amd64.pyd  config.pyx  report.c  report.pyx  update_db.c  (+9 more)
PickSeis_AI/: CMakeLists.txt  Makefile  Untitled-2.ipynb  config.ini  phasenet2.onnx  phasenet_601samples.onnx  picks.db  pickseisai  pickseisai.c  statefile.state  station_list.txt  tes.ipynb
PickSeis_AI/include/: seedlink_client.h
PickSeis_AI/include/core/: amplitude_extractor.h  config.h  data_window.h  picking_engine.h  station_manager.h
PickSeis_AI/include/utils/: bandpass_filter.h  interpolation.h  logger.h  sqlite_writer.h
PickSeis_AI/libmseed-2.19.6/: Makefile  fileutils.lo  genutils.lo  gswap.lo  libmseed.so.2.19.6  lmplatform.lo  logging.lo  lookup.lo  msrutils.lo  pack.lo  packdata.lo  parseutils.lo  selection.lo  tracelist.lo  traceutils.lo  unpack.lo  unpackdata.lo
PickSeis_AI/src/: amplitude_extractor.c  bandpass_filter.c  config.c  data_window.c  interpolation.c  logger.c  picking_engine.c  seedlink_client.c  sqlite_writer.c  station_manager.c
